# simple_crypto

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  TECHNICAL_DEBT  test.hs
.cargo/: config
src/: cryptonum.rs  hmac.rs  hmac2.rs  lib.rs  shake.rs  testing.rs  utils.rs
src/aes/: aesni.rs  mod.rs  portable.rs
src/cryptonum/: addition.rs  arithmetic_traits.rs  barrett.rs  basetypes.rs  builder.rs  comparison.rs  complete_arith.rs  conversions.rs  core.rs  division.rs  encoding.rs  exponentiation.rs  extended_math.rs  gold_tests.rs  mod.rs  modmath.rs  modops.rs  multiplication.rs  primes.rs  shifts.rs  signed.rs  squaring.rs  subtraction.rs  traits.rs  unsigned.rs
src/dsa/: errors.rs  generation.rs  gold_tests.rs  mod.rs  parameters.rs  params.rs  private.rs  public.rs  rfc6979.rs  tests.rs
src/ecdsa/: curve.rs  curves.rs  gold_tests.rs  math.rs  mod.rs  point.rs  private.rs  public.rs
src/ed25519/: constants.rs  fe.rs  loads.rs  mod.rs  point.rs  scalars.rs
src/rsa/: core.rs  errors.rs  gold_tests.rs  mod.rs  oaep.rs  private.rs  public.rs  signing_hashes.rs
src/sha/: mod.rs  sha1.rs  sha2.rs  sha3.rs  shared.rs
src/ssh/: dsa.rs  ecdsa.rs  ed25519.rs  errors.rs  frame.rs  mod.rs  rsa.rs
src/x509/: algident.rs  atv.rs  error.rs  misc.rs  mod.rs  name.rs  publickey.rs  validity.rs
test-generator/: DSA.hs  Database.hs  ECDSATesting.hs  ED25519.hs  Main.hs  Math.hs  RFC6979.hs  RSA.hs  Task.hs  Utils.hs  gcd.hs  test-generator.cabal
test-generator/ED25519/: PrecompPoints.hs
test-generator/cbits/: curve25519.c
testdata/aes/: aes128.test  aes256.test
testdata/dsa/: signL1024N160.test  signL2048N224.test  signL2048N256.test  signL3072N256.test
testdata/ed25519/: addsub.test  bytes.test  cmov.test  conversion.test  fbv.test  invert.test  istests.test  load.test  maddsub.test  mul.test  muladd.test  negate.test  pow22523.test  pt_double.test  ptaddsub.test  pubfrompriv.test  reduce.test  rfc8032.test  scalar_mult.test  scalar_mult_gen.test  sign.test  slide.test  square.test  square2.test
tests/: add_tests.txt  add_tests_signed.txt  barrett_tests.txt  div_tests.txt  div_tests_signed.txt  mod_tests.txt  mod_tests_signed.txt  modpow_tests.txt  mul_tests.txt  mul_tests_signed.txt  sub_tests.txt  sub_tests_signed.txt
tests/rsa/: CHANGELOG.md  GenerateRSATests.hs  Generator.hs  encryption.ext.test  genrsa.cabal  genrsa.hs  rsa1024.test  rsa2048.test  rsa3072.test  rsa4096.test  signature.test
tests/rsa/dead/: Generator.java  Test.hs  rsa1024.test  rsa2048.test  rsa3072.test  rsa4096.test  rsa512.test  rsa8192.test
(+339 files in other folders)
