[package]
name = "simple_crypto"
version = "0.1.0"
authors = ["Adam Wick <awick@uhsure.com>"]
description = "A simple crypto library for Rust."
categories = ["cryptography"]
keywords = ["crypto","cryptography"]
license-file = "LICENSE"
repository = "https://github.com/acw/simple_crypto"

[dependencies]
byteorder   = "^1.2.3"
digest      = "^0.7.1"
num         = "^0.1.42"
rand        = "^0.3"
sha-1       = "^0.7.0"
sha2        = "^0.7.0"
simple_asn1 = "^0.1.0"

[dev-dependencies]
quickcheck = "^0.4.1"

[profile.test]
opt-level = 2
debug = true
debug-assertions = true

