name:                genrsa
version:             0.1.0.0
-- synopsis:
-- description:
license:             ISC
license-file:        LICENSE
author:              Adam Wick
maintainer:          awick@uhsure.com
-- copyright:
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable genrsa
  main-is:             genrsa.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12, RSA >=2.3 && <2.4, crypto-api >=0.13 && <0.14, bytestring >=0.10 && <0.11, containers >=0.5 && <0.6
  -- hs-source-dirs:
  default-language:    Haskell2010
